--- a/lotter.html
+++ b/lotter.html
@@ -1,91 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>抽奖报名</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    .container {
-      background-color: white;
-      padding: 20px;
-      max-width: 400px;
-      margin: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input[type="text"], input[type="email"] {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .result {
-      margin-top: 20px;
-      font-weight: bold;
-      font-size: 18px;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lottery Sign Up</title>
+<style>
+body { font-family: Arial, sans-serif; padding: 20px; background: #f5f5f5; }
+.container { background: white; padding: 20px; max-width: 400px; margin: auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+input { width: 100%; padding: 8px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc; }
+button { padding: 10px 15px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; }
+button:hover { background: #45a049; }
+.result { margin-top: 20px; font-weight: bold; font-size: 18px; text-align: center; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2>报名抽奖</h2>
-    <label for="email">邮箱:</label>
-    <input type="email" id="email" placeholder="请输入邮箱" required>
-    <label for="insta">Instagram账号:</label>
-    <input type="text" id="insta" placeholder="请输入Instagram账号" required>
-    <button onclick="drawLottery()">抽奖</button>
-    <div class="result" id="result"></div>
-  </div>
+<div class="container">
+  <h2>Sign Up for Lottery</h2>
+  <input type="email" id="email" placeholder="Email" required>
+  <input type="text" id="insta" placeholder="Instagram Username" required>
+  <button onclick="submitForm()">Enter Lottery</button>
+  <div class="result" id="result"></div>
+</div>
 
-  <script>
-    const prizes = [
-      {name: "衣服", count: 50},
-      {name: "徽章", count: 250},
-      {name: "包包", count: 70},
-      {name: "帽子", count: 70}
-    ];
+<script>
+// 奖品比例
+const prizes = [
+  {name: "Shirt", count: 50},
+  {name: "Badge", count: 250},
+  {name: "Bag", count: 70},
+  {name: "Hat", count: 70}
+];
 
-    // 创建奖品概率数组
-    let prizePool = [];
-    prizes.forEach(p => {
-      for(let i=0; i<p.count; i++){
-        prizePool.push(p.name);
-      }
-    });
+// 构建奖品池
+let prizePool = [];
+prizes.forEach(p => {
+  for(let i=0; i<p.count; i++){
+    prizePool.push(p.name);
+  }
+});
 
-    function drawLottery() {
-      const email = document.getElementById("email").value.trim();
-      const insta = document.getElementById("insta").value.trim();
+function submitForm() {
+  const email = document.getElementById('email').value.trim();
+  const insta = document.getElementById('insta').value.trim();
+  if(!email || !insta){
+    alert("Please fill in both fields!");
+    return;
+  }
 
-      if(!email || !insta){
-        alert("请填写邮箱和Instagram账号！");
-        return;
-      }
+  // 提交到 Google Form / Airtable
+  const formURL = "https://docs.google.com/forms/d/e/your_form_id/formResponse";
+  const formData = new FormData();
+  formData.append("entry.XXXXXXX", email);  // 替换为表单 entry ID
+  formData.append("entry.YYYYYYY", insta);  // 替换为表单 entry ID
+  fetch(formURL, { method: "POST", mode: "no-cors", body: formData });
 
-      // 随机抽取
-      const randomIndex = Math.floor(Math.random() * prizePool.length);
-      const prize = prizePool[randomIndex];
-
-      document.getElementById("result").innerText = `恭喜你抽中了: ${prize}!`;
-    }
-  </script>
+  // 随机抽奖
+  const randomIndex = Math.floor(Math.random() * prizePool.length);
+  const prize = prizePool[randomIndex];
+  document.getElementById('result').innerText = `Congratulations! You won: ${prize}`;
+}
+</script>
 </body>
 </html>
+
+
