--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ button:hover {
 <body>
 <div class="container">
   <!-- Logo 放在顶部 -->
-  <img src="https://example.com/logo.png" alt="Logo" class="logo">
+  <img src="https://github.com/tritium0714/lottery/blob/main/%E7%99%BD%E8%89%B2logo%20z.png" alt="Logo" class="logo">
 
   <h2>Sign Up & Spin the Wheel!</h2>
   <input type="email" id="email" placeholder="Email" required>
@@ -104,5 +104,6 @@ function submitForm() {
 </script>
 </body>
 </html>
+
 
 
