--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ button:hover {
 <body>
 <div class="container">
   <!-- Logo 放在顶部 -->
-  <img src="https://github.com/tritium0714/lottery/blob/main/%E7%99%BD%E8%89%B2logo%20z.png" alt="Logo" class="logo">
+  <img src="https://github.com/tritium0714/lottery/blob/3976a680072e4a408479827fcce36362d2777511/%E7%99%BD%E8%89%B2logo%20z.png" alt="Logo" class="logo">
 
-  <h2>Sign Up & Spin the Wheel!</h2>
+  <h2>RayNeo CES Sign Up & Spin the Wheel!</h2>
   <input type="email" id="email" placeholder="Email" required>
   <input type="text" id="insta" placeholder="Instagram Username" required>
   <button onclick="submitForm()">Enter Lottery</button>
@@ -104,6 +104,7 @@ function submitForm() {
 </script>
 </body>
 </html>
+
 
 
 
