--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ button:hover {
 <body>
 <div class="container">
   <!-- Logo 放在顶部 -->
-  <img src="https://github.com/tritium0714/lottery/blob/3976a680072e4a408479827fcce36362d2777511/%E7%99%BD%E8%89%B2logo%20z.png" alt="Logo" class="logo">
+  <img src="https://raw.githubusercontent.com/tritium0714/lottery/b82088b7a572a2e7248d4c74cc3e714f30a8bd22/%E7%99%BD%E8%89%B2logo%20z.png
+" alt="Logo" class="logo">
 
   <h2>RayNeo CES Sign Up & Spin the Wheel!</h2>
   <input type="email" id="email" placeholder="Email" required>
@@ -104,6 +105,7 @@ function submitForm() {
 </script>
 </body>
 </html>
+
 
 
 
