--- a/index.html
+++ b/index.html
@@ -1,91 +1,108 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>抽奖报名</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    .container {
-      background-color: white;
-      padding: 20px;
-      max-width: 400px;
-      margin: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input[type="text"], input[type="email"] {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .result {
-      margin-top: 20px;
-      font-weight: bold;
-      font-size: 18px;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lottery Sign Up</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+.container {
+  background-color: #111;
+  padding: 20px;
+  max-width: 400px;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255,255,255,0.2);
+}
+input {
+  width: 100%;
+  padding: 8px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-color: #222;
+  color: #fff;
+}
+button {
+  padding: 10px 15px;
+  background: #444;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background: #666;
+}
+.result {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+}
+.logo {
+  max-width: 150px;
+  margin-bottom: 20px;
+}
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2>报名抽奖</h2>
-    <label for="email">邮箱:</label>
-    <input type="email" id="email" placeholder="请输入邮箱" required>
-    <label for="insta">Instagram账号:</label>
-    <input type="text" id="insta" placeholder="请输入Instagram账号" required>
-    <button onclick="drawLottery()">抽奖</button>
-    <div class="result" id="result"></div>
-  </div>
+<div class="container">
+  <!-- Logo -->
+  <img src="https://raw.githubusercontent.com/tritium0714/lottery/b82088b7a572a2e7248d4c74cc3e714f30a8bd22/%E7%99%BD%E8%89%B2logo%20z.png" alt="Logo" class="logo">
 
-  <script>
-    const prizes = [
-      {name: "衣服", count: 50},
-      {name: "徽章", count: 250},
-      {name: "包包", count: 70},
-      {name: "帽子", count: 70}
-    ];
+  <h2>Sign Up & Spin the Wheel!</h2>
+  <input type="email" id="email" placeholder="Email" required>
+  <input type="text" id="insta" placeholder="Instagram Username" required>
+  <button onclick="submitForm()">Enter Lottery</button>
+  <div class="result" id="result"></div>
+</div>
 
-    // 创建奖品概率数组
-    let prizePool = [];
-    prizes.forEach(p => {
-      for(let i=0; i<p.count; i++){
-        prizePool.push(p.name);
-      }
-    });
+<script>
+// 奖品配置（name + 数量）
+const prizes = [
+  {name: "Shirt", count: 50},
+  {name: "Badge", count: 250},
+  {name: "Bag", count: 70},
+  {name: "Hat", count: 70}
+];
 
-    function drawLottery() {
-      const email = document.getElementById("email").value.trim();
-      const insta = document.getElementById("insta").value.trim();
+// 构建奖品池
+let prizePool = [];
+prizes.forEach(p => {
+  for(let i=0;i<p.count;i++){
+    prizePool.push(p.name);
+  }
+});
 
-      if(!email || !insta){
-        alert("请填写邮箱和Instagram账号！");
-        return;
-      }
+function submitForm() {
+  const email = document.getElementById('email').value.trim();
+  const insta = document.getElementById('insta').value.trim();
+  if(!email || !insta){
+    alert("Please fill in both fields!");
+    return;
+  }
 
-      // 随机抽取
-      const randomIndex = Math.floor(Math.random() * prizePool.length);
-      const prize = prizePool[randomIndex];
+  // 提交到 Google Form
+  const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSf6KbxsG8fxpIX23uoZtXEtVx28YK1KS4QFkzRk3SXxHexYBQ/formResponse";
+  const formData = new FormData();
+  formData.append("entry.879397399", email);   // Email
+  formData.append("entry.742844322", insta);   // Instagram
+  fetch(formURL, { method: "POST", mode: "no-cors", body: formData });
 
-      document.getElementById("result").innerText = `恭喜你抽中了: ${prize}!`;
-    }
-  </script>
+  // 随机抽奖
+  const randomIndex = Math.floor(Math.random() * prizePool.length);
+  const prize = prizePool[randomIndex];
+  document.getElementById('result').innerText = `🎉 Congratulations! You won: ${prize}`;
+}
+</script>
 </body>
 </html>
+
+
