--- a/index.html
+++ b/index.html
@@ -65,33 +65,26 @@ button:hover {
 </div>
 
 <script>
-// 奖品配置（name + 数量）
+// 奖品按权重配置（weight 越大概率越高）
 const prizes = [
   {name: "Shirt", weight: 50},
-  {name: "Badge", weight: 250},
+  {name: "Badge", weight: 250}, // 高概率
   {name: "Bag", weight: 70},
   {name: "Hat", weight: 70}
 ];
 
+// 按权重抽奖
 function getRandomPrize() {
-  // 计算总权重
   const totalWeight = prizes.reduce((sum, p) => sum + p.weight, 0);
-  // 生成一个 0 ~ totalWeight 的随机数
   let rand = Math.random() * totalWeight;
 
-  // 遍历奖品，找到落在哪个区间
   for (let p of prizes) {
     if (rand < p.weight) return p.name;
     rand -= p.weight;
   }
 
-  // 兜底（正常不会触发）
-  return prizes[0].name;
+  return prizes[0].name; // 兜底
 }
-
-// 使用示例：
-const prize = getRandomPrize();
-console.log(prize);
 
 function submitForm() {
   const email = document.getElementById('email').value.trim();
@@ -108,11 +101,10 @@ function submitForm() {
   formData.append("entry.742844322", insta);   // Instagram
   fetch(formURL, { method: "POST", mode: "no-cors", body: formData });
 
-
-// 改成按权重抽奖
-const prize = getRandomPrize();
-document.getElementById('result').innerText = `🎉 Congratulations! You won: ${prize}`;
-
+  // 按权重抽奖
+  const prize = getRandomPrize();
+  document.getElementById('result').innerText = `🎉 Congratulations! You won: ${prize}`;
+}
 </script>
 </body>
 </html>
